--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -100,6 +100,15 @@ a:hover {
   color: #0077aa;
 }
 
+a[target="_blank"]:after {
+  content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
+  margin: 0 3px 0 5px;
+}
+
+footer div a[target="_blank"]:after {
+  content: "";
+  margin: 0 0 0 0;
+}
 
 img {
   height: 24px;
